// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`array fields array 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="form-group"
  >
    <div>
      <div
        className="p-0 m-0 row"
      >
        <div
          className="p-0 m-0 col"
        >
          <div
            className="p-0 m-0 container-fluid"
          >
            <div
              className="container"
            >
              <div
                className="mt-2 row"
              >
                <div
                  className="col-9"
                />
                <div
                  className="py-4 col-lg-3 col-3 col-3"
                >
                   
                  <button
                    className="ml-1 btn btn-primary"
                    color="primary"
                    disabled={false}
                    onClick={[Function]}
                    style={
                      Object {
                        "width": "100%",
                      }
                    }
                    type="button"
                  >
                    <svg
                      fill="currentColor"
                      height="1em"
                      pId="10297"
                      stroke="currentColor"
                      strokeWidth="0"
                      style={
                        Object {
                          "color": undefined,
                        }
                      }
                      t="1551322312294"
                      version="1.1"
                      viewBox="0 0 1024 1024"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <defs />
                      <path
                        d="M474 152m8 0l60 0q8 0 8 8l0 704q0 8-8 8l-60 0q-8 0-8-8l0-704q0-8 8-8Z"
                        pId="10298"
                      />
                      <path
                        d="M168 474m8 0l672 0q8 0 8 8l0 60q0 8-8 8l-672 0q-8 0-8-8l0-60q0-8 8-8Z"
                        pId="10299"
                      />
                    </svg>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <button
      className="btn btn-primary"
      disabled={false}
      type="submit"
    >
      Submit
    </button>
  </div>
</form>
`;

exports[`array fields checkboxes 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="form-group"
  >
    <div
      className="form-group"
    >
      <label
        className="form-label"
      />
      <select
        autoFocus={false}
        className="custom-select"
        disabled={false}
        id="root"
        multiple={true}
        name="nodejs"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        readOnly={false}
        required={false}
        value={Array []}
      >
        <option
          disabled={false}
          id="a"
          value="a"
        >
          a
        </option>
        <option
          disabled={false}
          id="b"
          value="b"
        >
          b
        </option>
        <option
          disabled={false}
          id="c"
          value="c"
        >
          c
        </option>
      </select>
    </div>
  </div>
  <div>
    <button
      className="btn btn-primary"
      disabled={false}
      type="submit"
    >
      Submit
    </button>
  </div>
</form>
`;

exports[`array fields fixed array 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="form-group"
  >
    <div>
      <div
        className="p-0 m-0 row"
      >
        <div
          className="p-0 m-0 col"
        >
          <div
            className="p-0 m-0 container-fluid"
          >
            <div>
              <div
                className="mb-2  d-flex align-items-center row"
              >
                <div
                  className="col-lg-9 col-9"
                >
                  <div
                    className="form-group"
                  >
                    <div
                      className="mb-0 form-group"
                    >
                      <label
                        className="form-label"
                      />
                      <input
                        autoFocus={false}
                        className="form-control"
                        disabled={false}
                        id="root_0"
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        readOnly={false}
                        required={true}
                        type="string"
                        value=""
                      />
                    </div>
                  </div>
                </div>
                <div
                  className="py-4 col-lg-3 col-3"
                />
              </div>
            </div>
            <div>
              <div
                className="mb-2  d-flex align-items-center row"
              >
                <div
                  className="col-lg-9 col-9"
                >
                  <div
                    className="form-group"
                  >
                    <div
                      className="mb-0 form-group"
                    >
                      <label
                        className="form-label"
                      />
                      <input
                        autoFocus={false}
                        className="form-control"
                        disabled={false}
                        id="root_1"
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        readOnly={false}
                        required={true}
                        type="number"
                        value=""
                      />
                    </div>
                  </div>
                </div>
                <div
                  className="py-4 col-lg-3 col-3"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <button
      className="btn btn-primary"
      disabled={false}
      type="submit"
    >
      Submit
    </button>
  </div>
</form>
`;
